--- a/views/about.jade
+++ b/views/about.jade
@@ -6,7 +6,7 @@
   ul 
     li Do you have that creeping feeling that your collected cases will disappear in the next PACS upgrade?
     li Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
-    li Do you want to show off your brilliant diagnosing skills and let the people praise you?
+    li Do you like sharing?
   br
   p
     | - Just use <span class=orbitron> RADIOCA.SE </span>
