working on cleanup

--- a/views/about.jade
+++ b/views/about.jade
@@ -47,7 +47,7 @@
   hr
   br
   | Please see
-  a(href="/colophon") colophon
+  a(href="/stat/colophon") colophon
   |  for the techical stuff and 
-  a(href="/disclaimer") disclaimer
+  a(href="/stat/disclaimer") disclaimer
   |  for the rest.
