--- a/views/layout.jade
+++ b/views/layout.jade
@@ -84,7 +84,7 @@ html
       a(href='/cases/0/-1')
         | Cases
       | &#x2002;
-      a(href='/about')
+      a(href='/stat/about')
         | About
       | &#x2002;
       a(href='mailto:info@radioca.se')
