--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -12,6 +12,17 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
         img.control(src='/icons/pencil.png')
       span#open
         img.control(src='/icons/tick.png')
+  span#controls
+    img.control#help(src='/icons/question.png')
+    img.control#savepage(src='/icons/disc.png')
+    span#savepage_dialog(style='display:none')
+      button(id='savepage_confirm', type='button')
+        | Save page
+    img.control#deletepage(src='/icons/minus.png')
+    span#deletepage_dialog(style='display:none')
+      button(id='deletepage_confirm', type='button')
+        | Delete Page
+    img.control#newpage(src='/icons/plus.png')
   #created(style='display:none')
     | #{created}
 #title
