add modality and description

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -21,6 +21,11 @@ a
     float left
     width 100%
     position relative
+#help_cancel
+    cursor pointer
+    position absolute
+    top 5px
+    right 5px
 .removeradio
     cursor pointer
     position absolute
@@ -61,6 +66,8 @@ span#controls
     float left
     height 25px
     width 55%
+#title
+    margin-top 20px
 #title>.txt>.textedit
     margin-top -2em
 #title>.txt>.mdtxt
