--- a/views/about.jade
+++ b/views/about.jade
@@ -17,32 +17,39 @@
   table#cheatsheet
     tr
       td
-        a &#x1f4ac;
-        | &#x2002; Feedback
+        img.control(src='/icons/balloon.png')
+        | Feedback
       td
-        a ?
-        | &#x2002; Markdown help
+        img.control(src='/icons/question.png') 
+        | Markdown help
     tr
       td
-        a ＋
-        | &#x2002; Add new page
+        img.control(src='/icons/plus.png')
+        | Add page / image / stack
       td
-        a &#x166d;
-        | &#x2002; Delete page
+        img.control(src='/icons/minus.png')
+        | Delete page
     tr
       td
-        a &#x29be; 
-        | &#x2002; Save page
+        img.control(src='/icons/disc.png') 
+        | Save page
       td
-        a &#x2295;
-        | &#x2002; Add new image/stack
+        img.control(src='/icons/cross.png')
+        | Remove image / stack
     tr
       td
-       a ◀
-       | &#x2002; Previous page
+        img.control(src='/icons/pencil.png')
+        | Edit page / text
+      td  
+        img.control(src='/icons/tick.png')
+        | Done
+    tr
       td
-       a ▶ 
-       | &#x2002; Next page
+        img.control(src='/icons/arrow-180.png')
+        | Previous page
+      td
+        img.control(src='/icons/arrow.png') 
+        | Next page
   br
   hr
   br
