--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -59,8 +59,7 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       br
   img.control#addstack(style='display:none', src='/icons/plus.png')
   #markdown-help(style='display:none')
-    a.session(id='help_cancel')
-      | X
+    img#help_cancel(src='/icons/cross.png')
     textarea.mdtxt(style='display:none')
       #{mdhelp}
     .md
