--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@
   .big_logo RADIOCA.SE
   br
   br
-  img(src='/images/OldRadio_3_320.svg', style='width: 320px')
+  img(src='/images/OldRadio_3_320.png', style='width: 320px')
 
   h1.damion -Welcome
 
