--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -23,6 +23,7 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       button(id='deletepage_confirm', type='button')
         | Delete Page
     img.control#newpage(src='/icons/plus.png')
+    img.control#boxit(src='/icons/box.png')
   #created(style='display:none')
     | #{created}
 #title
