About to redo cases-list

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,9 @@
+.modality
+    margin 10px    
+    white-space nowrap
+.description
+    margin 10px
+    white-space nowrap
 #modalities_form
     font-family helvetica, arial
 #description_form
@@ -37,6 +43,16 @@ a
     position absolute
     top 5px
     right 5px
+.moveradiodown
+    cursor pointer
+    position absolute
+    bottom 5px
+    left 5px
+.moveradioup
+    cursor pointer
+    position absolute
+    top 5px
+    left 5px
 .pageimage
     width 30%
     margin 1%
@@ -134,10 +150,10 @@ span#controls
     display block
     position fixed 
 .dialog_box
-    width 320px
+    width 65%
     position absolute
     left 50%
-    margin-left -160px
+    margin-left -32%
     top -50%
     visibility visible
     background #222
@@ -262,7 +278,7 @@ textarea
     color #006
     position absolute
     width 45%
-    top 25px
+    top 40px
     left 5%
 #editbar
     height 20px
