--- a/views/about.jade
+++ b/views/about.jade
@@ -31,6 +31,13 @@
         | Delete page
     tr
       td
+        img.control(src='/icons/arrow-090.png')
+        | Move image up
+      td
+        img.control(src='/icons/arrow-270.png')
+        | Move image down
+    tr
+      td
         img.control(src='/icons/disc.png') 
         | Save page
       td
