redoing cases-list

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,3 +1,19 @@
+.hidecase
+    position absolute
+    cursor pointer
+.showcase
+    position absolute
+    cursor pointer
+#nextpage
+    position fixed
+    right 0px
+    bottom 10px
+    z-index 10000
+#prevpage
+    position fixed
+    left -5px
+    bottom 10px
+    z-index 10000
 .modality
     margin 10px    
     white-space nowrap
@@ -202,8 +218,8 @@ span#controls
 .casesli
     text-align center
 .deletecase
-    border solid
-    color red
+    position absolute
+    cursor pointer
 #cases_lc
     width 48%
     float left
