--- a/views/cases.jade
+++ b/views/cases.jade
@@ -1,7 +1,6 @@
 #topleftdiv
 #cases
   h1.damion Cases
-  a(href='/newcase') Create Case
   br
   table#cases
     thead
@@ -9,7 +8,9 @@
         th Modalities
         th Area
         th Title
-        th Creator
+        //        th Creator
+        th
+        th
     tbody
       - each c in cases
         tr 
@@ -17,9 +18,23 @@
           td #{c.description}
           td 
             a(href='/case/#{c.cid}/1') #{c.title}
-          td
-            a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
-              @#{c.creator}
+          //          td
+          //            a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
+          //              @#{c.creator}
+          td(style='width:24px')
             - if (c.creator == user) 
-              button.deletecase(ID='#{c.cid}')
-                | DELETE
+              img.deletecase(ID='#{c.cid}', src='/icons/minus.png')
+          td(style='width:24px')
+            - if (c.creator == user) 
+                img.showcase(ID='#{c.cid}', src='/icons/eye-prohibition.png', style='visibility:hidden')
+                img.hidecase(ID='#{c.cid}', src='/icons/eye.png', style='visibility:hidden')
+  a(href='/newcase')
+    img.control(src='/icons/plus.png', style='margin-top:30px')
+script(type='text/javascript')
+  if(#{c.hidden}){
+    $(".showcase").show()}
+  else{
+    $(".hidecase").show();
+      }
+
+  
