--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,8 @@ html
     script(src = '/auth/client')
     script(src = 'http://platform.twitter.com/widgets.js')
     script(src = '/javascripts/jquery.mousewheel.min.js')
-    script(src = '/javascripts/showdown.js')
+    script(src = '/javascripts/Markdown.Converter.js')
+    script(src = '/javascripts/Markdown.Sanitizer.js')
     script(src = '/javascripts/client.js')
     //script(src= 'http://10.0.1.5:8124/debug.js')
   body
