--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -34,6 +34,10 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       ##{title}
     .md
     img.control.textedit.session(src='/icons/pencil.png')
+a#prevpage(href='/case/#{cid}/#{prevpage}')
+  img.control(src='/icons/arrow-180.png')
+a#nextpage(href='/case/#{cid}/#{nextpage}')
+  img.control(src='/icons/arrow.png')
 #texts
   .txt
     textarea.mdtxt(style='display:none')
@@ -42,10 +46,6 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     img.control.textedit.session(src='/icons/pencil.png')
   br
   br
-  a#prevpage(href='/case/#{cid}/#{prevpage}', style='float: left')
-    img.control(src='/icons/arrow-180.png')
-  a#nextpage(href='/case/#{cid}/#{nextpage}', style='float: right')
-    img.control(src='/icons/arrow.png')
 #radios
   - each r in radios
     .radio(id='#{r.ID}')
