--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -23,6 +23,7 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       button(id='deletepage_confirm', type='button')
         | Delete Page
     img.control#newpage(src='/icons/plus.png')
+    img.control#boxit(src='/icons/box.png')
   #created(style='display:none')
     | #{created}
 #title
@@ -31,6 +32,10 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
       ##{title}
     .md
     img.control.textedit.session(src='/icons/pencil.png')
+a#prevpage(href='/case/#{cid}/#{prevpage}')
+  img.control(src='/icons/arrow-180.png')
+a#nextpage(href='/case/#{cid}/#{nextpage}')
+  img.control(src='/icons/arrow.png')
 #texts(style='width: 100%')
   .txt
     textarea.mdtxt(style='display:none')
@@ -39,10 +44,6 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
     img.control.textedit.session(src='/icons/pencil.png')
   br
   br
-  a#prevpage(href='/case/#{cid}/#{prevpage}', style='float: left')
-    img.control(src='/icons/arrow-180.png')
-  a#nextpage(href='/case/#{cid}/#{nextpage}', style='float: right')
-    img.control(src='/icons/arrow.png')
 #markdown-help(style='display:none')
   a.session(id='help_cancel')
     | X
@@ -59,6 +60,12 @@ img.control#feedbackbutton(src='/icons/balloon.png')
 #info(style='display:none')
 script(type='text/javascript')
   $(function(){
+    $("#{modalities}").each(function(){
+      $(this).attr("checked",true);
+    });
+    $("#{description}").each(function(){
+      $(this).attr("checked",true);
+    });
     var cid = '#{cid}';
     var page = '#{page}';
     if(#{editor}=='1') {
