--- a/views/about.jade
+++ b/views/about.jade
@@ -28,7 +28,14 @@
         | Add page / image / stack
       td
         img.control(src='/icons/minus.png')
-        | Delete page
+        | Delete page / case
+    tr
+      td
+        img.control(src='/icons/eye.png')
+        | Case visible
+      td
+        img.control(src='/icons/eye-prohibition.png')
+        | Case hidden
     tr
       td
         img.control(src='/icons/arrow-090.png')
