--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -7,7 +7,7 @@ input.rounded
     box-shadow 2px 2px 3px #222
     position absolute
     top 35px
-    right 35px
+    right 5% 
 tbody td
     background-color #444
     color #ccc
@@ -33,6 +33,9 @@ td.hovered
     left -5px
     bottom 10px
     z-index 10000
+.language
+    margin 10px
+    white-space nowrap
 .modality
     margin 10px    
     white-space nowrap
