--- a/views/about.jade
+++ b/views/about.jade
@@ -17,53 +17,60 @@
   table#cheatsheet
     tr
       td
-        img.control(src='/icons/balloon.png')
-        | Feedback
-      td
         img.control(src='/icons/question.png') 
-        | Markdown help
+      td Markdown help
+      td
+        img.control(src='/icons/box.png')
+      td Metadata / Categorize
     tr
       td
         img.control(src='/icons/plus.png')
-        | Add page / image / stack
+      td Add page / image 
       td
         img.control(src='/icons/minus.png')
-        | Delete page / case
+      td Delete page / case
     tr
       td
         img.control(src='/icons/eye.png')
-        | Case visible
+      td Case visible
       td
         img.control(src='/icons/eye-prohibition.png')
-        | Case hidden
+      td Case hidden
     tr
       td
         img.control(src='/icons/arrow-090.png')
-        | Move image up
+      td Move image up
       td
         img.control(src='/icons/arrow-270.png')
-        | Move image down
+      td Move image down
     tr
       td
         img.control(src='/icons/disc.png') 
-        | Save page
+      td Save page
       td
         img.control(src='/icons/cross.png')
-        | Remove image / stack
+      td Remove image
     tr
       td
         img.control(src='/icons/pencil.png')
-        | Edit page / text
+      td Edit page / text
       td  
         img.control(src='/icons/tick.png')
-        | Done
+      td Done
     tr
       td
         img.control(src='/icons/arrow-180.png')
-        | Previous page
+      td Previous page
       td
         img.control(src='/icons/arrow.png') 
-        | Next page
+      td Next page
+    tr
+      td 
+        img.control(src='/icons/bookmark.png')
+      td Bookmark
+      td
+        img.control(src='/icons/balloon.png')
+      td Feedback
   br
   hr
   br
