--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,16 +5,16 @@ html
     title RADIOCA.SE - #{title}
 
     link(href='http://fonts.googleapis.com/css?family=Orbitron:400,500|Dancing+Script|Damion', rel='stylesheet', type='text/css')
-    link(rel='stylesheet', href='/stylesheets/reset.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src = '/javascripts/jquery-1.7.min.js')
-    script(src = '/javascripts/jquery-ui-1.8.16.custom.min.js')
+    link(rel='stylesheet', href='/static/css/reset.css')
+    link(rel='stylesheet', href='/static/css/style.css')
+    script(src = '/static/js/jquery-1.7.min.js')
+    script(src = '/static/js/jquery-ui-1.8.16.custom.min.js')
     script(src = '/auth/client')
     script(src = 'http://platform.twitter.com/widgets.js')
-    script(src = '/javascripts/jquery.mousewheel.min.js')
-    script(src = '/javascripts/Markdown.Converter.js')
-    script(src = '/javascripts/Markdown.Sanitizer.js')
-    script(src = '/javascripts/client.js')
+    script(src = '/static/js/jquery.mousewheel.min.js')
+    script(src = '/static/js/Markdown.Converter.js')
+    script(src = '/static/js/Markdown.Sanitizer.js')
+    script(src = '/static/js/client.js')
     //script(src= 'http://10.0.1.5:8124/debug.js')
   body
     #sl
